--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Yan Huang"
+  name             : "Yan Huang 黄䶮"
   avatar           : "profile.png"
-  bio              : "Senior Undergrduate Student in SUSTech"
+  bio              : "Senior Undergrduate Student at SUSTech"
   location         : "Shenzhen, China"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
