--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /research/
 
   - title: "Seminars"
-    url: /seminars/    
+    url: /seminar/    
 
   - title: "Teaching"
     url: /teaching/    
