--- a/_config.yml
+++ b/_config.yml
@@ -181,12 +181,16 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
-  portfolio:
+  #portfolio:
+    #output: true
+    #permalink: /:collection/:path/
+  #talks:
+    #output: true
+    #permalink: /:collection/:path/
+  seminars:
     output: true
     permalink: /:collection/:path/
-  talks:
-    output: true
-    permalink: /:collection/:path/
+
 
 
 # Defaults
