--- a/_config.yml
+++ b/_config.yml
@@ -178,7 +178,13 @@ collections:
   teaching:
     output: true
     permalink: /:collection/:path/
-  research:
+  publications:
+    output: true
+    permalink: /:collection/:path/
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
+  talks:
     output: true
     permalink: /:collection/:path/
   seminars:
@@ -216,10 +222,10 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _research
+  # _publiations
   - scope:
       path: ""
-      type: research
+      type: publications
     values:
       layout: single
       author_profile: true
