--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,9 +6,11 @@ main:
   - title: "Seminars"
     url: /seminar/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Courses"
+    url: /course/    
     
+  - title: "Teaching"
+    url: /teaching/      
     
   - title: "CV"
     url: /cv/
