--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,6 +12,6 @@ main:
   - title: "Teaching"
     url: /teaching/      
     
-  - title: "CV"
-    url: /cv/
+  #- title: "CV"
+   # url: /cv/
     
