--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yan Huang 黄䶮"
   avatar           : "profile.png"
-  bio              : "Senior Undergrduate at SUSTech"
+  bio              : #"Fresh Ph.D. at UMN"
   location         : "Shenzhen, China"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
