--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Yan Huang 黄䶮"
   avatar           : "profile.png"
-  bio              : "First year Ph.D. student at UMN"
-  location         : "322 Vincent Hall 206 Church St. SE Minneapolis, MN 55455"
+  bio              : "1st year Ph.D. student"
+  location         : "Minneapolis, MN 55455"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
