--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yan Huang 黄䶮"
   avatar           : "profile.png"
-  bio              : "Ph.D. student"
+  bio              : "Ph.D. student at UMN"
   location         : "Minneapolis, MN 55455"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
