--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Yan Huang 黄䶮"
   avatar           : "profile.png"
   bio              : "Ph.D. student at UMN"
-  location         : "Minneapolis, MN 55455"
+  location         : "Minneapolis, MN"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
