--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Yuhan Liu's Home Page"
 title_separator          : "-"
 name                     : &name "Yuhan Liu"
 description              : &description "personal description"
-url                      : https://yuhanliu6.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://YuhanLiu6.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "YuhanLiu6/YuhanLiu6.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
